Started working on landing, changed logo in navbar and removed connection to backend for now

--- a/src/components/UI/Navbar/Navbar.module.scss
+++ b/src/components/UI/Navbar/Navbar.module.scss
@@ -9,6 +9,10 @@
   -moz-box-shadow: 0 10px 24px 1px #0000001a;
   box-shadow: 0 10px 24px 1px #0000001a;
 
+  .logo {
+    height: 30px;
+  }
+
   .content {
     height: 70px;
     display: flex;
