--- a/src/components/UI/Forms/Selection/Selection.module.scss
+++ b/src/components/UI/Forms/Selection/Selection.module.scss
@@ -2,7 +2,6 @@
   .titleCon {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
 
     h5 {
       color: #212529;
@@ -17,8 +16,14 @@
       margin-left: 2px;
     }
   }
+  .desc {
+    font-size: 14px;
+    color: #868e96;
+    margin-top: 4px;
+  }
 
   .searchInputCon {
+    margin-top: 16px;
     border: 1px solid #ced4da;
     width: 100%;
     border-radius: 8px;
