--- a/src/pages/Job/Applications/Application/Application.module.scss
+++ b/src/pages/Job/Applications/Application/Application.module.scss
@@ -4,7 +4,11 @@
   width: 100%;
   border-radius: 12px;
   padding: 16px 20px;
-  position: relative;
+  // position: relative;
+
+  .body {
+    height: 100px;
+  }
 
   .header {
     display: flex;
@@ -26,11 +30,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 16px;
-    padding: 0 16px;
+    // position: absolute;
+    // left: 0;
+    // right: 0;
+    // bottom: 16px;
+    // padding: 0 16px;
 
     .offerCon {
       border: 1px solid #eaeaea;
@@ -46,15 +50,15 @@
     }
   }
 
-  .arrNextCon {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  // .arrNextCon {
+  //   position: absolute;
+  //   top: 0;
+  //   bottom: 0;
+  //   right: 16px;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
 }
 
 .popup {
