--- a/src/components/UI/Navbar/Navbar.module.scss
+++ b/src/components/UI/Navbar/Navbar.module.scss
@@ -8,6 +8,7 @@
   -webkit-box-shadow: 0 10px 24px 1px #0000001a;
   -moz-box-shadow: 0 10px 24px 1px #0000001a;
   box-shadow: 0 10px 24px 1px #0000001a;
+  z-index: 9000;
 
   .logo {
     height: 30px;
