--- a/src/pages/Landing/Landing.module.scss
+++ b/src/pages/Landing/Landing.module.scss
@@ -1,31 +1,3 @@
 .wrapper {
-  height: 200vh;
-
-  .numbers {
-    background-color: #dcf3ff;
-    width: 100%;
-    .numberInner {
-      height: 90px;
-      width: 100%;
-      color: #0088cc;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 15%;
-
-      .numberEl {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        h3 {
-          font-size: 36px;
-          font-weight: bold;
-        }
-        p {
-          font-size: 24px;
-        }
-      }
-    }
-  }
+  // height: 200vh;
 }
