--- a/src/pages/UserProfile/components/Section.module.scss
+++ b/src/pages/UserProfile/components/Section.module.scss
@@ -118,3 +118,12 @@
   align-items: center;
   justify-content: center;
 }
+
+.loadingWrapper {
+  width: 100%;
+  border-radius: 12px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
