--- a/src/components/UI/PopUpContainer/PopUpContainer.module.scss
+++ b/src/components/UI/PopUpContainer/PopUpContainer.module.scss
@@ -18,6 +18,7 @@
     // align-items: center;
     background-color: #fff;
     width: 90%;
+    max-width: 400px;
     max-height: 80%;
     z-index: 100000;
   }
